added checkin, checkout api. added alter holder transaction
